CTW: fatal error: meet not symmetric

XMLWordPrintable

    • b17

        $ cd test/hotspot/jtreg/testlibrary/ctw
        $ make
        $ cd dist
        $ wget https://cr.openjdk.java.net/~shade/8263448/test.jar
        $ JAVA_OPTIONS="-XX:+StressCCP" ./ctw.sh ./test.jar

        === Meet Not Symmetric ===
        t = java/lang/reflect/Constructor:TopPTR:exact * (inline_depth=InlineDepthTop)
        this= java/lang/reflect/Executable:TopPTR * (inline_depth=InlineDepthTop)
        mt=(t meet this)= java/lang/reflect/Constructor:TopPTR:exact * (inline_depth=InlineDepthTop)
        t_dual= java/lang/reflect/Constructor:exact *,iid=top
        this_dual= java/lang/reflect/Executable *,iid=top
        mt_dual= java/lang/reflect/Constructor:exact *,iid=top
        mt_dual meet t_dual= java/lang/reflect/Constructor:exact *,iid=top
        mt_dual meet this_dual= java/lang/reflect/Executable *

        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (/home/shade/trunks/jdk/src/hotspot/share/opto/type.cpp:850), pid=4108526, tid=4108566
        # fatal error: meet not symmetric

        Run multiple times, because I think it does not fail every time. The actual JAR that fails is https://repo1.maven.org/maven2/com/groupdocs/groupdocs-assembly/18.5/groupdocs-assembly-18.5.jar, but it is far too long to compile. I dissected the part of it that fails more reliably.

              Assignee:
              Vladimir Kozlov
              Reporter:
              Aleksey Shipilev
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

                Created:
                Updated:
                Resolved: