8263448: CTW: fatal error: meet not symmetric